exports[`<SnippetArea /> matches snapshot of when it is not read-only 1`] = `
<SnippetArea
  annotatedLines={
    Array [
      "1",
      "2",
      "3",
    ]
  }
  contents=""
  onGutterClick={[Function]}
  onSaveClick={[Function]}
  onSnippetChanged={[Function]}
  onTitleChanged={[Function]}
  readOnly={false}
  snippetLanguage="bash"
  switchReadOnlyMode={[Function]}
  title="" />
`;

exports[`<SnippetArea /> matches snapshot of when it is read-only 1`] = `
<SnippetArea
  annotatedLines={
    Array [
      "1",
      "2",
      "3",
    ]
  }
  contents=""
  onGutterClick={[Function]}
  onSaveClick={[Function]}
  onSnippetChanged={[Function]}
  onTitleChanged={[Function]}
  readOnly={true}
  snippetLanguage="bash"
  switchReadOnlyMode={[Function]}
  title="" />
`;
